# pinball

./: .dockerignore  .gitignore  .travis.yml  AUTHORS  BUILD.md  CONTRIBUTING.md  ChangeLog  Dockerfile  FAQ.md  License.txt  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  acconfig.h  acinclude.m4  aclocal.m4  bootstrap  clean  conf.h.in  configure  configure.ac  configure.in  configure.sh  docker-compose.yml  helper.mk  mkinstalldirs  pinball-config.in  pinball.appdata.xml  pinball.desktop  pinball.dsw  pinball.spec  pinball.yaml  pinconfig.h  pinconfig.h.in  stamp-h.in
addon/: BigSphere.cpp  BigSphere.h  ColorBehavior.cpp  ColorBehavior.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  EmFont.cpp  EmFont.h  Grid.cpp  Grid.h  KeyBehavior.cpp  KeyBehavior.h  KeyRotBehavior.cpp  KeyRotBehavior.h  Makefile  Makefile.am  Makefile.in  Menu.cpp  Menu.h  Meny.cpp  Meny.h  Shape3DUtil.cpp  Shape3DUtil.h  SoundUtil.cpp  SoundUtil.h  Sphere.cpp  Sphere.h  StdAnimation.cpp  StdAnimation.h  TexAnimation.cpp  TexAnimation.h  TextureUtil.cpp  TextureUtil.h  addon.dsp
base/: AlignVisitor.cpp  AlignVisitor.h  AllegroVisitor.cpp  AllegroVisitor.h  AmbientLightVisitor.cpp  AmbientLightVisitor.h  BaseTest.h  Behavior.cpp  Behavior.h  BehaviorVisitor.cpp  BehaviorVisitor.h  BillBoard.cpp  BillBoard.h  Camera.cpp  Camera.h  CollisionBounds.cpp  CollisionBounds.h  CollisionVisitor.cpp  CollisionVisitor.h  Config.cpp  Config.h  EMath.cpp  EMath.h  EmFont.cpp  EmFont.h  Engine.cpp  Engine.h  Group.cpp  Group.h  Keyboard.cpp  Keyboard.h  Light.cpp  Light.h  Makefile  Makefile.am  Makefile.in  Node.cpp  Node.h  Obj3dsUtil.cpp  Obj3dsUtil.h  (+31 more)
data/: Makefile.am  Makefile.in  arm.emi  arm_le.emi  arm_le_co.emi  arm_ri.emi  arm_ri_co.emi  ball_co.emi  bumper.emi  bumper_co.emi  bumper_sh.emi  font_16.pcx  font_35.pcx  formats.txt  grid.emi  grid_big.emi  grid_long.emi  grid_tex.emi  grid_tex_co.emi  head.emi  head_co.emi  pinball.xpm  pinballnew.pbl  pinballtmp.pbl  pinballtrk.pbl  splash.png.pcx  tbltruck.emi  tbltruck_co.emi  tbltruck_lo.emi  tbltruck_vi.emi  topgrid.emi
data/gnu/: .README.swp  Makefile.am  ModuleGnu.cpp  README  pinball.pbl
data/house/: arm-left.asc  arm-right.asc  bumper-base.asc  bumper.asc  face.asc  floor-walls-side.asc  floor-walls-top.asc  floor.asc  game.mid  house-3d.asc  intro.mid  pinball.pbl  plunger.asc  rails.asc
data/hurd/: Makefile.am  ModuleHurd.cpp  README.txt  floortotal.xcf  freesoftwaresong.mid  gnu.xcf  hurd.xcf  label.xcf  local.mk  pinball.pbl
data/hurd.old/: Makefile.am  ModuleHurd.cpp  README.txt  freesoftwaresong.xml  intro.mid  pinball.pbl
data/locale/: LINGUAS  Makevars  POTFILES.in  ca_ES.po  de_DE.po  es_ES.po  fr_FR.po  pinball.pot  pinball_de_DE.po  pinball_fr_FR.po  pinball_pt_PT.po  pt_PT.po  update.sh  update_utf8.sh
data/professor/: Makefile.am  Makefile.in  ModuleProfessor.cpp  floor.png.pcx  highscores  pinball.pbl  professor.mid
data/professor2/: Makefile.am  README.txt  pinball.pbl
data/tux/: Makefile.am  Makefile.in  ModuleTux.cpp  face.png.pcx  floor.pbl  floor2.png.pcx  game.mid  highscores  multiball.mid  pinball.pbl  tiles.png.pcx  tux.mid
emilia/addon/: BigSphere.cpp  ColorBehavior.h  Cone.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Grid.cpp  Grid.h  KeyBehavior.cpp  KeyRotBehavior.cpp  KeyRotBehavior.h  Makefile.am  Makefile.in  Meny.cpp  Meny.h  Shape3DUtil.cpp  Shape3DUtil.h  SoundUtil.cpp  Sphere.h  StdAnimation.cpp  StdAnimation.h  TexAnimation.cpp  TextureUtil.cpp
emilia/core/: Behavior.h  BillBoard.cpp  BillBoard.h  Camera.cpp  Camera.h  CollisionBounds.cpp  CollisionBounds.h  EMath.cpp  EMath.h  EmFont.cpp  Engine.cpp  Engine.h  Group.h  Keyboard.cpp  Keyboard.h  Light.h  Makefile.am  Node.h  Polygon.cpp  Private.h  StateMachine.h  Visitor.h
emilia/test/: Makefile.am  Makefile.in  alpha.cpp  anim.cpp  big.cpp  billboard.cpp  camera.cpp  explode.cpp  fire.cpp  font.cpp  joy.cpp  key.cpp  light.cpp  load.cpp  math.cpp  meny.cpp  signal.cpp  simple.cpp  sound.cpp  texture.cpp
emilia/visitor/: AlignVisitor.cpp  AlignVisitor.h  AmbientLightVisitor.cpp  AmbientLightVisitor.h  BehaviorVisitor.cpp  BehaviorVisitor.h  CollisionVisitor.cpp  CollisionVisitor.h  Makefile.am  Makefile.in  OpenGLTransVisitor.cpp  OpenGLTransVisitor.h  OpenGLVisitor.cpp  OpenGLVisitor.h  PNormalVisitor.cpp  PNormalVisitor.h  PointLightVisitor.cpp  PointLightVisitor.h  SignalVisitor.cpp  SignalVisitor.h  SoundVisitor.cpp  SoundVisitor.h  (+2 more)
pinball/: AUTHORS  Makefile.in  configure  configure.in
src/: ArmBehavior.cpp  ArmBehavior.h  BallGroup.cpp  BallGroup.h  BounceBehavior.cpp  BounceBehavior.h  BumperBehavior.cpp  BumperBehavior.h  CaveBehavior.cpp  CaveBehavior.h  EyeBehavior.cpp  EyeBehavior.h  FakeModuleBehavior.h  Loader.cpp  Loader.h  LoaderModule.cpp  LoaderModule.h  LockBehavior.cpp  LockBehavior.h  Makefile.am  Makefile.in  Menu.cpp  Menu.h  Obj3dsUtil.cpp  Obj3dsUtil.h  PblMenu.cpp  PblMenu.h  Pinball.cpp  Pinball.h  PlungerBehavior.cpp  PlungerBehavior.h  Score.cpp  Score.h  Script.cpp  Script.h  SrcTest.h  StateBehavior.cpp  StateBehavior.h  SwitchBehavior.cpp  SwitchBehavior.h  (+5 more)
test/: Makefile.am  Makefile.in  alpha.cpp  anim.cpp  big.cpp  billboard.cpp  camera.cpp  collision.cpp  explode.cpp  fire.cpp  font.cpp  font_12.pcx  font_16.pcx  joy.cpp  key.cpp  light.cpp  load.cpp  math.cpp  menu.cpp  meny.cpp  misc.cpp  module.txt  moduletest.cpp  scale.cpp  script.txt  ship.emi  signal.cpp  simple.cpp  sound.cpp  test.pbl  texture.cpp  thread.cpp  tmp.emi  token.txt  trans.cpp  unittest  unittest.cpp  varray.cpp
visitor/: AlignVisitor.cpp  AlignVisitor.h  AmbientLightVisitor.cpp  AmbientLightVisitor.h  BehaviorVisitor.cpp  BehaviorVisitor.h  CollisionVisitor.cpp  CollisionVisitor.h  Makefile.am  Makefile.in  OctTree.cpp  OctTree.h  OpenGLTransVisitor.cpp  OpenGLTransVisitor.h  OpenGLVisitor.cpp  OpenGLVisitor.h  PNormalVisitor.cpp  PNormalVisitor.h  PointLightVisitor.cpp  PointLightVisitor.h  SignalSender.cpp  SignalSender.h  SoundVisitor.cpp  SoundVisitor.h  TransformVisitor.cpp  TransformVisitor.h
(+151 files in other folders)
