AUTOMAKE_OPTIONS = gnu

noinst_LIBRARIES = libemilia_addon.a
dnl noinst_LTLIBRARIES = libemilia_addon.la

dnl libemilia_addon_la_LDFLAGS = -static

INCLUDES = -I../base -I../visitor

libemilia_addon_a_SOURCES = \
BigSphere.cpp \
ColorBehavior.cpp \
Cone.cpp \
Cube.cpp \
Cylinder.cpp \
Grid.cpp \
KeyBehavior.cpp \
KeyRotBehavior.cpp \
Menu.cpp \
Sphere.cpp \
StdAnimation.cpp \
TexAnimation.cpp

dnl libemilia_addon_la_SOURCES = $(libemilia_addon_a_SOURCES)

noinst_HEADERS = \
BigSphere.h \
ColorBehavior.h \
Cone.h \
Cube.h \
Cylinder.h \
Grid.h \
KeyBehavior.h \
KeyRotBehavior.h \
Menu.h \
Sphere.h \
StdAnimation.h \
TexAnimation.h
