AUTOMAKE_OPTIONS = gnu

pkglib_LIBRARIES = libemilia_addon.a

INCLUDES = -I../base

libemilia_addon_a_SOURCES = \
BigSphere.cpp \
ColorBehavior.cpp \
Cone.cpp \
Cube.cpp \
Cylinder.cpp \
Grid.cpp \
KeyBehavior.cpp \
KeyRotBehavior.cpp \
Menu.cpp \
Sphere.cpp \
StdAnimation.cpp \
TexAnimation.cpp

pkginclude_HEADERS = \
BigSphere.h \
ColorBehavior.h \
Cone.h \
Cube.h \
Cylinder.h \
Grid.h \
KeyBehavior.h \
KeyRotBehavior.h \
Menu.h \
Sphere.h \
StdAnimation.h \
TexAnimation.h
