AUTOMAKE_OPTIONS = gnu

noinst_LIBRARIES = libemilia_base.a
dnl noinst_LTLIBRARIES = libemilia_base.la

dnl libemilia_base_la_LDFLAGS = -static -export-dynamic

INCLUDES = -I../addon -I../visitor

libemilia_base_a_SOURCES = \
AlignVisitor.cpp \
AllegroVisitor.cpp \
AmbientLightVisitor.cpp \
Behavior.cpp \
BehaviorVisitor.cpp \
BillBoard.cpp \
Camera.cpp \
CollisionBounds.cpp \
CollisionVisitor.cpp \
Config.cpp \
EMath.cpp \
EmFont.cpp \
Engine.cpp \
Group.cpp \
Keyboard.cpp \
Light.cpp \
Node.cpp \
OctTree.cpp \
OpenGLVisitor.cpp \
PointLightVisitor.cpp \
Polygon.cpp \
Profiler.cpp \
Shape3D.cpp \
SignalSender.cpp \
Sound.cpp \
SoundUtil.cpp \
SoundVisitor.cpp \
TextureUtil.cpp \
TransformVisitor.cpp

dnl libemilia_base_la_SOURCES = $(libemilia_base_a_SOURCES)

noinst_HEADERS = \
AlignVisitor.h \
AllegroVisitor.h \
AmbientLightVisitor.h \
BaseTest.h \
Behavior.h \
BehaviorVisitor.h \
BillBoard.h \
Camera.h \
CollisionBounds.h \
CollisionVisitor.h \
Config.h \
EMath.h \
EmFont.h \
Engine.h \
Group.h \
Keyboard.h \
Light.h \
Node.h \
OctTree.h \
OpenGLVisitor.h \
PointLightVisitor.h \
Polygon.h \
Private.h \
Profiler.h \
Shape3D.h \
SignalSender.h \
Sound.h \
SoundUtil.h \
SoundVisitor.h \
StateMachine.h \
TextureUtil.h \
TransformVisitor.h \
Visitor.h
