AUTOMAKE_OPTIONS = gnu

pinlibdir = $(libdir)/pinball
pinincludedir = $(includedir)/pinball

pinlib_LIBRARIES = libemilia_base.a

INCLUDES = -I../addon

libemilia_base_a_SOURCES = \
AlignVisitor.cpp \
AllegroVisitor.cpp \
AmbientLightVisitor.cpp \
Behavior.cpp \
BehaviorVisitor.cpp \
BillBoard.cpp \
Camera.cpp \
CollisionBounds.cpp \
CollisionVisitor.cpp \
Config.cpp \
EMath.cpp \
EmFont.cpp \
Engine.cpp \
Group.cpp \
Keyboard.cpp \
Light.cpp \
Node.cpp \
Obj3dsUtil.cpp \
OctTree.cpp \
OpenGLVisitor.cpp \
PointLightVisitor.cpp \
Polygon.cpp \
Profiler.cpp \
Shape3D.cpp \
SignalSender.cpp \
Sound.cpp \
SoundUtil.cpp \
SoundVisitor.cpp \
TextureUtil.cpp \
TransformVisitor.cpp

pininclude_HEADERS = \
AlignVisitor.h \
AllegroVisitor.h \
AmbientLightVisitor.h \
BaseTest.h \
Behavior.h \
BehaviorVisitor.h \
BillBoard.h \
Camera.h \
CollisionBounds.h \
CollisionVisitor.h \
Config.h \
EMath.h \
EmFont.h \
Engine.h \
Group.h \
Keyboard.h \
Light.h \
Node.h \
Obj3dsUtil.h \
OctTree.h \
OpenGLVisitor.h \
PointLightVisitor.h \
Polygon.h \
Private.h \
Profiler.h \
Shape3D.h \
SignalSender.h \
Sound.h \
SoundUtil.h \
SoundVisitor.h \
StateMachine.h \
TextureUtil.h \
TransformVisitor.h \
Visitor.h
