pkgdata_DATA = \
arm_le_co.emi  bump.wav    \
arm_le.emi     font_16.png \
arm_ri_co.emi  evil.wav    grid.emi      \
arm_ri.emi     fart.wav    grid_tex.emi  tbltruck_co.emi  \
ball_co.emi    fjong.wav   head_co.emi   pinballnew.pbl   \
bumper_co.emi  head.emi    grid_big.emi  grid_tex_co.emi  \
bumper.emi     floor2.png  tiles.png     tbltruck_vi.emi  \
bumper_sh.emi  flush.wav   lock.wav      topgrid.emi      \
formats.txt

EXTRA_DIST = $(pkgdata_DATA)
